<resources>
    <string name="app_name">HotspoTalk</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chatting_room_name">채팅방명</string>
    <string name="total_people_number">총 인원</string>
    <string name="password">비밀번호</string>
    <string name="chatting">채팅</string>
    <string name="create_room">방 만들기</string>
    <string name="sign_up">회원가입</string>
    <string name="id">아이디</string>
    <string name="password_check">비밀번호 확인</string>
    <string name="sign_in">로그인</string>
    <string name="meter">%dm</string>
    <string name="nickname">닉네임</string>
</resources>