<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.example.hotspotalk.viewmodel.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/padding_start_sign"
        android:paddingTop="@dimen/padding_top_sign"
        android:paddingEnd="@dimen/padding_start_sign"
        android:paddingBottom="@dimen/padding_top_sign"
        tools:context=".view.fragment.SignUpFragment">

        <TextView
            android:id="@+id/textView3"
            style="@style/TitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/MainTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/MainTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/id"
                android:text="@={vm.id}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            style="@style/MainTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/MainTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:text="@={vm.pw}" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button"
            style="@style/Widget.AppCompat.Button.MainButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:onClick="@{() -> vm.signUp()}"
            android:text="@string/sign_up"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
            tools:layout_editor_absoluteX="30dp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textView5"
                style="@style/Base.Widget.AppCompat.TextView.RegularTextView"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="이미 회원이신가요?"
                android:textColor="@color/deep_grey" />

            <TextView
                android:id="@+id/textView4"
                style="@style/Base.Widget.AppCompat.TextView.RegularTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:text="로그인하기"
                android:textColor="@drawable/selector_text_view_sign" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>