<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.example.hotspotalk.viewmodel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:paddingTop="@dimen/padding_top_sign"
        android:paddingBottom="@dimen/padding_top_sign"
        android:paddingStart="@dimen/padding_start_sign"
        android:paddingEnd="@dimen/padding_start_sign"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragment.LoginFragment">

        <TextView
            android:id="@+id/textView7"
            style="@style/TitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout4"
            style="@style/MainTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/MainTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/id"
                android:text="@{vm.id}"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout5"
            style="@style/MainTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout4"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout4"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/MainTextInputEditText"
                android:text="@{vm.pw}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            style="@style/Widget.AppCompat.Button.MainButton"
            android:onClick="@{() -> vm.login()}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_sign_btn"
            android:text="@string/sign_in"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout5"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout5"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout5" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textView9"
                style="@style/Base.Widget.AppCompat.TextView.RegularTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="이미 회원이신가요?" />

            <TextView
                android:id="@+id/tv_login_login"
                style="@style/Base.Widget.AppCompat.TextView.RegularTextView"
                android:clickable="true"
                android:textColor="#505050"
                android:padding="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="로그인하기" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>